--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -15,6 +15,14 @@ person:
 
 career:
  - position: Software Engineer - Backend
+   company: Fasttech ID (placement at Telkom Indonesia)
+   location: Jakarta, Indonesia
+   dates: 2022 - 2023
+   summary: Join with tribe eHealth to develop app named "Lovit Superapp" to provide service for all internal employee of Telkom Indonesia
+   accomplishments:
+    - accomplishment: Lovit - App to provide service and monitoring tools for employee of Telkom Indonesia.
+    - accomplishment: Lovit Doctor - App to provide doctor a platform to monitor and set anamnesis, diagnosys, reciping and referring employee to nearest health facility.
+ - position: Software Engineer - Backend
    company: SPE Solution
    location: Jakarta, Indonesia
    dates: 2021 - 2022
@@ -22,14 +30,7 @@ career:
    accomplishments:
     - accomplishment: BNI Autopay - Autopay Is a payment system owned by BNI that has the capacity to autodebit from BNI's individual taplus accounts. VA Auto Pay will produce a web application for monitoring and service that can be integrated with many e-commerce or marketplaces.
     - accomplishment: Wappin ID - Wappin is platform to communicate which using WhatsApp API for create WhatsApp Business Integration.
- - position: Software Engineer - Backend
-   company: Telkom Indonesia
-   location: Jakarta, Indonesia
-   dates: 2022 - 2022
-   summary: Join with tribe eHealth to develop app named "Lovit Superapp" to provide service for all internal employee of Telkom Indonesia
-   accomplishments:
-    - accomplishment: Lovit - App to provide service and monitoring tools for employee of Telkom Indonesia.
-    - accomplishment: Lovit Doctor - App to provide doctor a platform to monitor and set anamnesis, diagnosys, reciping and referring employee to nearest health facility.
+    - accomplishment: Wappin GO - Wappin ID On-Premise based System.
  - position: Fullstack Web Developer
    company: PT. Papabli Bisnis Semesta
    location: Jakarta, Indonesia
@@ -37,6 +38,13 @@ career:
    summary: Papabli is a pioneer and leader digital ecosystem B2B MMS (Marketplace and Management System) in Indonesia, we help all company business (product and service) to reach their highest potential capability on closing sales and reduce cost on their spending at the same time.
    accomplishments:
     - accomplishment: Papabli.com - Web platform to perform B2B transaction.
+ - position: Internship Data Engineer
+   company: Budi Luhur University
+   location: Jakarta, Indonesia
+   dates: 2020 - 2020
+   summary: Budi Luhur University is a private university in Jakarta, Indonesia. Founded on 1 April 1979 by Dr. Djaetun HS.. This university is now running under Budi Luhur Cakti Education Foundation.
+   accomplishments:
+   - accomplishment: Cooperate with team to create Business Intelligence Service with Pentaho Data Integration Software.
 
 technicalSkills:
   list:
